add activeadmin for user management

--- a/apps/auth/app/views/home/index.html.erb
+++ b/apps/auth/app/views/home/index.html.erb
@@ -1,5 +1,10 @@
-<div class="container" style="display: flex; flex-direction: row; justify-content: center">
-  <div style="padding: 10px 20px; border: 1px solid black; margin-top: 10px">
+<div>
+  <% flash.each do |key, value| %>
+    <div style="text-align: center; padding: 10px 0; background: #ffeeee;"><%= value %></div>
+  <% end %>
+</div>
+<div class="container" style="display: flex; flex-direction: row; justify-content: center;">
+  <div style="padding: 10px 20px; border: 1px solid black; margin-top: 10px;">
     Logged in as: <b><%= current_user.email %></b> (<%= current_user.first_name %> <%= current_user.last_name %>)
 
     <br><br>
