--- a/apps/auth/app/views/home/index.html.erb
+++ b/apps/auth/app/views/home/index.html.erb
@@ -1,14 +1,19 @@
-<div>
+<div class="container flex flex-col items-center">
   <% flash.each do |key, value| %>
-    <div style="text-align: center; padding: 10px 0; background: #ffeeee;"><%= value %></div>
+    <div class="text-center p-3 bg-red-100 w-full"><%= value %></div>
   <% end %>
-</div>
-<div class="container" style="display: flex; flex-direction: row; justify-content: center;">
-  <div style="padding: 10px 20px; border: 1px solid black; margin-top: 10px;">
-    Logged in as: <b><%= current_user.email %></b> (<%= current_user.first_name %> <%= current_user.last_name %>)
+  <div class="py-3 px-5 border-2 border-gray-800 mt-3">
+    <h2>
+      Logged in as: <b><%= current_user.email %></b> (<%= current_user.first_name %> <%= current_user.last_name %>)
+    </h2>
 
-    <br><br>
-
-    <%= link_to "Logout", destroy_user_session_path, data: { "turbo-method": :delete } %>
+    <%=
+      link_to(
+        "Sign out",
+        destroy_user_session_path,
+        data: { "turbo-method": :delete },
+        class: "underline text-blue-800"
+      )
+    %>
   </div>
 </div>
