Some UI for task tracker, task created/assigned events

--- a/apps/task_tracker/app/views/home/index.html.erb
+++ b/apps/task_tracker/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container flex flex-col items-center">
+<!-- <div class="container flex flex-col items-center">
   <% flash.each do |key, value| %>
     <div class="text-center p-3 bg-red-100 w-full"><%= value %></div>
   <% end %>
@@ -33,3 +33,4 @@
 </div>
 
 
+ -->
