restructure events a bit, improve trcker UI, add mising features

--- a/apps/task_tracker/app/views/layouts/application.html.erb
+++ b/apps/task_tracker/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="h-full">
+<html class="min-h-full">
   <head>
     <title>TaskTracker</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -46,7 +46,8 @@
         </div>
       </div>
     </header>
-    <main class="container mx-auto py-5 flex max-w-screen-sm">
+
+    <main class="py-5 container mx-auto flex max-w-screen-sm">
       <%= yield %>
     </main>
   </body>
