--- a/apps/task_tracker/app/views/tasks/_task.html.erb
+++ b/apps/task_tracker/app/views/tasks/_task.html.erb
@@ -10,7 +10,7 @@
     <p class="w-1/3 py-2 text-center">
       <span class="text-pink-600">-$<%= task.assignment_fee %></span>
       /
-      <span class="text-emerald-600">-$<%= task.completion_reward %></span>
+      <span class="text-emerald-600">+$<%= task.completion_reward %></span>
     </p>
     <div class="w-1/3 text-right">
       <% if task.in_progress? && task.assignee == current_user %>
