--- a/apps/task_tracker/app/views/tasks/_task.html.erb
+++ b/apps/task_tracker/app/views/tasks/_task.html.erb
@@ -13,7 +13,7 @@
       <span class="text-emerald-600">+$<%= task.completion_reward %></span>
     </p>
     <div class="w-1/3 text-right">
-      <% if task.in_progress? && task.assignee == current_user %>
+      <% if task.in_progress? && task.assignee == current_employee %>
         <%= button_to "[_] Complete", task_completions_path(task), class: "px-5 py-2 ml-3 rounded-xl bg-emerald-500 text-emerald-100 font-semibold uppercase tracking-wide shadow-sm shadow-black hover:shadow-inner hover:shadow-black" %>
       <% end %>
     </div>
