--- a/apps/task_tracker/app/views/tasks/index.html.erb
+++ b/apps/task_tracker/app/views/tasks/index.html.erb
@@ -1,17 +1,11 @@
-<div class="flex-col w-full">
-  <%= render partial: "form" %>
+<div class="mt-8 w-full">
+  <h2 class="text-center text-2xl font-bold leading-9 tracking-tight text-gray-200">Tasks</h2>
 
-  <div class="mt-8">
+  <div class="mt-6">
     <%= render partial: "tasks_list_controls", locals: { tasks: @tasks } %>
   </div>
 
-  <% if @tasks.any? %>
+  <div class="mt-5">
     <%= render partial: "tasks_list", locals: { tasks: @tasks } %>
-  <% else %>
-    <div class="bg-white w-full text-gray-800 overflow-visible py-5 rounded-xl mt-4 shadow-md shadow-black">
-      <div class="mt-3 px-5 ">
-        <p class="text-center">There are no tasks.</p>
-      </div>
-    </div>
-  <% end %>
+  </div>
 </div>
