--- a/apps/task_tracker/app/views/tasks/_task.html.erb
+++ b/apps/task_tracker/app/views/tasks/_task.html.erb
@@ -12,9 +12,9 @@
 <div class="mt-2 pt-2 border-t-2 border-gray-100 flex justify-between items-center text-xs">
   <p class="w-1/3 py-2 text-semibold uppercase tracking-wide text-gray-500"><%= task.assignee.full_name %></p>
   <p class="w-1/3 py-2 text-center">
-    <span class="text-pink-600">-$<%= task.assignment_fee %></span>
+    <span class="text-pink-600">-?</span>
     /
-    <span class="text-emerald-600">+$<%= task.completion_reward %></span>
+    <span class="text-emerald-600">+?</span>
   </p>
   <div class="w-1/3 text-right">
     <% if task.in_progress? && task.assignee == current_employee %>
